fixed height of new images to prevent overflow

--- a/public/styles/bikeDetails.css
+++ b/public/styles/bikeDetails.css
@@ -65,8 +65,9 @@
 }
 
 .bikeBox img {
-  /*max-height: 200px;*/
-  /*width: auto;*/
+  max-height: 185px;
+  width: auto;
+  margin: auto;
 }
 
 .addBikeBox {
